--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -14,6 +14,7 @@ dependencies {
     implementation project(':capacitor-app')
     implementation project(':capacitor-haptics')
     implementation project(':capacitor-keyboard')
+    implementation project(':codetrix-studio-capacitor-google-auth')
     implementation project(':capacitor-push-notifications')
     implementation project(':capacitor-status-bar')
 
