--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@capacitor/core": "7.2.0",
     "@capacitor/haptics": "7.0.1",
     "@capacitor/keyboard": "7.0.1",
+     "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
     "@capacitor/push-notifications": "^7.0.1",
     "@capacitor/status-bar": "7.0.1",
     "@ionic/react": "^8.5.0",
@@ -27,6 +28,7 @@
     "@types/howler": "^2.2.12",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "blob-util": "^2.0.2",
     "canvas-confetti": "^1.9.3",
     "firebase": "^11.8.1",
     "howler": "^2.2.4",
