--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
     "@capacitor-firebase/authentication": "^7.1.0",
     "@capacitor/android": "^7.2.0",
     "@capacitor/app": "7.0.1",
+    "@capacitor/camera": "^7.0.1",
     "@capacitor/core": "7.2.0",
     "@capacitor/haptics": "7.0.1",
     "@capacitor/keyboard": "7.0.1",
-
     "@capacitor/preferences": "^7.0.1",
-
     "@capacitor/push-notifications": "^7.0.1",
     "@capacitor/status-bar": "7.0.1",
     "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
