--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@capacitor/android": "^7.2.0",
     "@capacitor/app": "7.0.1",
     "@capacitor/camera": "^7.0.1",
-    "@capacitor/core": "7.2.0",
+    "@capacitor/core": "^7.2.0",
     "@capacitor/haptics": "7.0.1",
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/preferences": "^7.0.1",
@@ -45,7 +45,7 @@
     "zustand": "^5.0.5"
   },
   "devDependencies": {
-    "@capacitor/cli": "7.2.0",
+    "@capacitor/cli": "^7.2.0",
     "@testing-library/dom": ">=7.21.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^16.2.0",
